--- a/src/components/PieceView-style.css
+++ b/src/components/PieceView-style.css
@@ -1,7 +1,7 @@
 .Piece {
   display: flex;
-  height: 100%;
-  width: 100%;
+  height: 80%;
+  width: 80%;
   background-color: transparent;
   border: unset;
   -webkit-transition: all 100ms ease-out;
@@ -13,8 +13,17 @@
 
 .Piece:active {
   transform: scale(0.8);
-
 }
+
+.Piece:has([type=radio]:checked) {
+  transform: scale(0.9);
+}
+
+.Piece:has([type=radio]:checked) img {
+  transform: translateY(-4px);
+  filter: drop-shadow(0 12px 8px rgba(0, 0, 0, 0.25)) ;
+}
+
 
 img {
   height: 100%;
@@ -25,4 +34,22 @@ img {
 
 .Piece:active img {
   filter: brightness(0.8);
+}
+
+/* HIDE RADIO */
+[type=radio] {
+  position: absolute;
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* IMAGE STYLES */
+[type=radio] + img {
+  cursor: pointer;
+}
+
+/* CHECKED STYLES */
+[type=radio]:checked + img {
+  outline: 2px solid #f00;
 }
