canMove() implemented for all chess pieces
- Updated README.md.
- Added new text for whose go it is in App.tsx.
- The radio buttons used for selecting a chess piece are now controlled via React, using generated ids passed from BoardView to PieceView.
- Updated free_movement() to make it more generic and moved it to Piece.ts where it can be used by any piece.
-Removed all remnants of the old classes.

--- a/src/components/PieceView-style.css
+++ b/src/components/PieceView-style.css
@@ -1,3 +1,4 @@
+
 .Piece {
   display: flex;
   height: 80%;
@@ -17,6 +18,23 @@
 
 .Piece:has([type=radio]:checked) {
   transform: scale(0.9);
+}
+
+.Piece:hover {
+  transform: scale(0.9);
+}
+
+.Piece:active {
+  transform: scale(0.8);
+}
+
+
+.Piece:hover {
+  transform: scale(0.9);
+}
+
+.Piece:active {
+  transform: scale(0.8);
 }
 
 .Piece:has([type=radio]:checked) img {
@@ -49,7 +67,7 @@ img {
   cursor: pointer;
 }
 
-/* CHECKED STYLES */
-[type=radio]:checked + img {
-  outline: 2px solid #f00;
-}
+/*!* CHECKED STYLES *!*/
+/*[type=radio]:checked + img {*/
+/*  outline: 2px solid #f00;*/
+/*}*/
