--- a/src/components/App-style.css
+++ b/src/components/App-style.css
@@ -5,13 +5,30 @@
   height: 100vh;
   align-items: center;
   justify-content: center;
+  align-content: center;
   gap: 24px;
   background-color: #343944;
 }
 
-h1, a {
+#game-stats {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+h1, a , p {
   margin: 0;
   color: white;
+}
+
+h1 {
+  font-size: x-large;
+  font-weight: normal;
+}
+
+p {
+  font-size: xx-large;
+  font-weight: bold;
 }
 
 .App-link {
