--- a/src/components/SquareView-style.css
+++ b/src/components/SquareView-style.css
@@ -5,7 +5,9 @@
     align-items: center;
     justify-content: center;
     box-sizing: border-box;
-    background-color: #E8EDF9;
+    background-color: #B7C0D8;
+    border: none;
+    padding: 0;
 }
 
 /*To get the checker board*/
@@ -13,7 +15,7 @@
 :nth-child(16n-11), :nth-child(16n-9),
 :nth-child(16n-6), :nth-child(16n-4), :nth-child(16n-2),
 :nth-child(16n) {
-    background-color: #B7C0D8;
+    background-color: #E8EDF9;
 }
 
 .Square:after {
@@ -32,6 +34,12 @@
     opacity: 100%;
     width: 50%;
     height: 50%;
+}
+
+.Square.Highlighted:hover:after {
+    opacity: 90%;
+    width: 40%;
+    height: 40%;
 }
 
 
